crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_119_TQROM_Pin_Bot_E.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-119-TQROM/Pin Bot (E) [!].nes
rom_sha256=b86c3f54a3070b9a46ef51c09c9016c8d3b6f32193877306ba9f22918f7407aa
frames=700
fb_bytes=245760
cycles=23240002
audio_samples=616414
audio_fnv1a64=d709288005a6e14f
checkpoint f700 fb_fnv1a64=7cbb7df24750e4e0
