crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_119_TQROM_Pin_Bot_USA_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-119-TQROM/Pin Bot (USA).zip
rom_sha256=9e9d5521d024ad1adf9a1b8194cb0670f803898f593b1cf5991ad3dbfe97ce92
frames=1141
fb_bytes=245760
cycles=33949778
audio_samples=836505
audio_fnv1a64=1d2eede284983622
checkpoint f900 fb_fnv1a64=c3ee7eafedbdc45d
checkpoint f1100 fb_fnv1a64=12254fcabc9bd44b
