crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_120_TobidaseFDS_Tobidase_Daisakusen_FDS_Conversion_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-120-TobidaseFDS/Tobidase Daisakusen (FDS Conversion).zip
rom_sha256=bc52a8461a773e76d75c03c761a4741434fcc0e59050118a3e1964372ca8944c
frames=1141
fb_bytes=245760
cycles=33949775
audio_samples=836505
audio_fnv1a64=66aad09cbd8db2ab
checkpoint f900 fb_fnv1a64=0891c48b1429343c
checkpoint f1100 fb_fnv1a64=6b6a9baed778fd95
