crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_121_KashengA9711_Ultimate_Mortal_Kombat_3_Unl.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
assertion_line: 673
expression: text
---
rom=mapper-121-KashengA9711/Ultimate Mortal Kombat 3 (Unl) [!].nes
rom_sha256=c04b0c7908a05556493e7eceae6a7b1c93f4c4f359bf95f52aec7ff2d3a0fc75
frames=1141
fb_bytes=245760
cycles=33949775
audio_samples=836505
audio_fnv1a64=d806df80167ca254
checkpoint f900 fb_fnv1a64=9749f7a1b04e4563
checkpoint f1100 fb_fnv1a64=9749f7a1b04e4563
