crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_121_KashengA9711_Yuu_Yuu_Hakusho_97_V_Eng_Ch.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
assertion_line: 673
expression: text
---
rom=mapper-121-KashengA9711/Yuu Yuu Hakusho 97 V (Eng) (Ch).nes
rom_sha256=9c1e38c5955743513b0a2a19fd5925050279fee0c553724d144a940a65bdd7c2
frames=1141
fb_bytes=245760
cycles=33949775
audio_samples=836505
audio_fnv1a64=48351d356ea57cea
checkpoint f900 fb_fnv1a64=384f5cfb478cc9a6
checkpoint f1100 fb_fnv1a64=384f5cfb478cc9a6
